# TicTacToe

./: BENCHMARKS.md  Cargo.toml  README.md
src/: app.rs  app_state.rs  consts.rs  helpers.rs  lib.rs  main.rs  mech.rs  mechanics.rs
src/screens/: exiting.rs  ingame.rs  mod.rs  pregame.rs  pregame_confirm.rs
toetactic_bin/: Cargo.toml
toetactic_bin/src/: app.rs  app_state.rs  consts.rs  lib.rs  main.rs
toetactic_bin/src/screens/: exiting.rs  ingame.rs  mod.rs  pregame.rs  pregame_confirm.rs  startover.rs
toetactic_lib/: Cargo.toml  Optimal depths.md  README.md
toetactic_lib/src/: lib.rs  mech.rs
